--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,69 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="1127dp"
+    android:height="1054dp"
+    android:viewportWidth="1127"
+    android:viewportHeight="1054">
+  <group>
+    <clip-path
+        android:pathData="M0,0h1127v1054h-1127z"/>
+    <group>
+      <clip-path
+          android:pathData="M187.5,12.5C94.2,12.5 18.5,88.2 18.5,181.5L18.5,857.5C18.5,950.8 94.2,1026.5 187.5,1026.5L941.5,1026.5C1034.8,1026.5 1110.5,950.8 1110.5,857.5L1110.5,181.5C1110.5,88.2 1034.8,12.5 941.5,12.5ZM0,0 L1127,0 1127,1054 0,1054Z"
+          android:fillType="evenOdd"/>
+      <group>
+        <clip-path
+            android:pathData="M2.6,3.8h1123.9v1045.9h-1123.9z"/>
+        <group>
+          <clip-path
+              android:pathData="M1,2h1127v1049h-1127z"/>
+          <path
+              android:pathData="M18.5,188.7C18.5,95.4 94.2,19.7 187.5,19.7L941.5,19.7C1034.8,19.7 1110.5,95.4 1110.5,188.7L1110.5,864.7C1110.5,958.1 1034.8,1033.7 941.5,1033.7L187.5,1033.7C94.2,1033.7 18.5,958.1 18.5,864.7Z"
+              android:strokeLineJoin="round"
+              android:strokeWidth="3"
+              android:fillColor="#FF0000"
+              android:fillType="evenOdd"
+              android:strokeColor="#46AAC5"
+              android:strokeLineCap="butt"/>
+        </group>
+      </group>
+    </group>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M18.5,181.5C18.5,88.2 94.2,12.5 187.5,12.5L941.5,12.5C1034.8,12.5 1110.5,88.2 1110.5,181.5L1110.5,857.5C1110.5,950.8 1034.8,1026.5 941.5,1026.5L187.5,1026.5C94.2,1026.5 18.5,950.8 18.5,857.5Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="3.4375"
+        android:fillType="evenOdd"
+        android:strokeColor="#46AAC5"
+        android:strokeLineCap="butt">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="564.5"
+            android:startY="1026.5"
+            android:endX="564.5"
+            android:endY="12.5"
+            android:tileMode="mirror"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF9EEAFF"/>
+          <item android:offset="0.3" android:color="#FFBBEFFF"/>
+          <item android:offset="1" android:color="#FFE4F9FF"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <group>
+      <clip-path
+          android:pathData="M18,713l417,0l0,298l-417,0z"/>
+      <group>
+        <clip-path
+            android:pathData="M18,714l416,0l0,296l-416,0z"/>
+      </group>
+    </group>
+    <group>
+      <clip-path
+          android:pathData="M282,81l640,0l0,641l-640,0z"/>
+      <group>
+        <clip-path
+            android:pathData="M282,81l640,0l0,640l-640,0z"/>
+      </group>
+    </group>
+  </group>
 </vector>
