Add test case for open exchange rate service.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <EditText
+                    android:hint="@string/your_desired_amount"
                     android:id="@+id/baseValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
